k8s/drivetogetherbotservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: drivetogetherbotservice
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: drivetogetherbotservice
