k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - port: 3005
    targetPort: 8080
  selector:
    app: keycloak
