k8s/notificationservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: notificationservice
