k8s/tripservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripservice
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: tripservice
