k8s/userservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: userservice
